--- a/playground/package.json
+++ b/playground/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "modular-app",
-  "version": "4.0.0",
+  "name": "modular-ui-components-app",
+  "version": "1.0.0",
   "private": true,
-  "homepage": "https://cianciarusocataldo.github.io/modular-ui",
+  "homepage": "https://cianciarusocataldo.github.io/modular-ui-components",
   "dependencies": {
     "@cianciarusocataldo/demo-ui": "^3.1.0",
-    "@cianciarusocataldo/modular": "^0.9.9",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "modular-creator": "^0.5.0",
+    "modular-engine": "^0.5.3",
+    "modular-creator-plugins": "^0.2.0",
+    "modular-plugins": "^0.3.10",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@types/history": "^4.7.8",
+    "@cianciarusocataldo/demo-ui": "^3.1.0",
     "@types/jest": "^27.4.0",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^16.11.17",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-router-dom": "^5.1.7",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.1",
     "chokidar-cli": "^3.0.0",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "cssnano": "^5.0.14",
     "gh-pages": "^3.2.3",
+    "modular-engine": "^0.5.3",
+    "modular-creator-plugins": "^0.2.0",
+    "modular-plugins": "^0.3.10",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^9.1.0",
     "postcss-import": "^14.0.2",
@@ -56,12 +60,13 @@
     "prebuild:dev": "cross-env NODE_ENV=development npm run build:styles",
     "build:dev": "cross-env NODE_ENV=development GENERATE_SOURCEMAP=true react-scripts build",
     "build:styles": "postcss --config config/postcss.config.js src/assets/styles/styles.css -o src/assets/styles/styles.output.css  --verbose",
-    "watch:styles": "chokidar 'src/**/*.js' 'src/**/*.ts' 'src/**/*.tsx' --ignore src/assets/styles/styles.output.css -c 'npm run build:styles'",
+    "watch:styles": "chokidar 'src/**/*.css' --ignore src/assets/styles/styles.output.css -c 'npm run build:styles'",
+    "watch": "chokidar \"src/**/*.css\" \"src/**/*.tsx\" \"src/**/*.ts\" -c \"npm run build:styles\"",
     "prebuild": "cross-env NODE_ENV=production npm run build:styles",
     "build": "cross-env NODE_ENV=production GENERATE_SOURCEMAP=false react-scripts build",
     "prestart": "cross-env NODE_ENV=development npm run build:styles",
     "start:app": "cross-env NODE_ENV=development GENERATE_SOURCEMAP=false react-scripts start",
-    "start": "npm-run-all --parallel watch:styles start:app",
+    "start": "npm-run-all --parallel watch watch:styles start:app",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
