--- a/playground/public/docs/manifest.json
+++ b/playground/public/docs/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Modular-ui documentation",
-  "name": "Modular-ui documentation",
+  "short_name": "Modular-ui-components documentation",
+  "name": "Modular-ui-components documentation",
   "icons": [
     {
       "src": "app-icon.ico",
