--- a/playground/public/manifest.json
+++ b/playground/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Modular-ui",
-  "name": "Modular-ui",
+  "short_name": "Modular-ui-components playground",
+  "name": "Modular-ui-components playground",
   "icons": [
     {
       "src": "app-icon.ico",
